# tempura

./: .bazelrc  .clang-tidy  .clangd  .clangd.base  .editorconfig  .gitignore  ADDING_NEW_DERIVATIVE_RULES.md  ADDITION_RULES_IMPROVEMENTS.md  ARCHITECTURE_COMPARISON.md  AST-TYPE-REPRESENTATIONS.md  BUILD_FIXES_SUMMARY.md  CANONICAL_FORMS_COMMIT_MESSAGE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CMakePresets.json  COMPLETE_TERM_STRUCTURE_SUMMARY.md  CONSTEXPR_DEBUGGING_IMPLEMENTATION.md  DERIVATIVE_MIGRATION_COMPLETE.md  DERIVATIVE_REFACTORING.md  DESIGN-symbolic4.md  DESIGN_DOCS_INDEX.md  DOCS_STRUCTURE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  FACTORING_BUG_ANALYSIS.md  FACTORING_FIX_SUMMARY.md  FIXPOINT_OSCILLATION_BUG.md  FRACTION_FEATURE_COMPLETE.md  FRACTION_IMPLEMENTATION_SUMMARY.md  FRACTION_INTEGRATION_COMPLETE.md  GEMINI.md  HYPERBOLIC_FUNCTIONS_IMPLEMENTATION.md  LICENSE  META_TYPE_SORT_IMPLEMENTATION.md  MULTIPLICATION_TERM_STRUCTURE_IMPLEMENTATION.md  NEXT_STEPS_BRAINSTORM.md  PATTERN_MATCHING_REFACTORING.md  PI_E_IMPLEMENTATION.md  README.md  RECOMMENDATION_1_IMPLEMENTATION.md  (+61 more)
examples/: BUILD  CMakeLists.txt  README.md  advanced_simplify_demo.cpp  bayes_reports_example.cc  block_graphics_demo.cpp  clocks.cpp  constexpr_debugging_demo.cpp.disabled  fork.cpp  fraction_demo.cpp  glfw_main.cpp  hello_triangle.cpp  hello_world.cpp  hessian.cpp  hierarchical_model_example.cc  histogram_main.cpp  hmc_example.cc  hmc_symbolic4_example.cc  hyperbolic_demo.cpp  image_main.cpp  io_uring_demo.cpp  matrix3_demo.cpp  mcmc_visual.cpp  normal_reverse_autodiff.cpp  ode_demo.cpp  plot_main.cpp  predictive_checks_example.cc  pretty_print_demo.cpp  profile.cpp  sample_normal.cpp  scheduler_demo.cpp  scorer_comparison.cpp  simd_main.cpp  simplify_demo.cpp.disabled  single_producer_consumer_queue.cpp  string_display_debugging.cpp  sudoku_parallel.cpp  symbolic3_debug_demo.cpp  symbolic3_demo.cpp  symbolic3_simplify_demo.cpp  (+8 more)
examples/build_tooling/: CMakeLists.txt  bench_lto.cpp  profile_example.cpp  static_assert_demo.h  static_assert_demo_test.cc
examples/ideoms/: CMakeLists.txt  cyclic_visitor.cpp  passkey.cpp  strategy.cpp  visitor.cpp
examples/idioms/: CMakeLists.txt  concepts.cpp  crtp.cpp  external_polymorphism.cpp  manual_dispatch_type_erasure.cpp  observer.cpp  passkey.cpp  sbo_type_erasure.cpp  type_erasure.cpp
examples/reflection/: CMakeLists.txt  README.md  basic_reflection.cpp  define_aggregate.cpp  enum_to_string.cpp  function_reflection.cpp  json_serialization.cpp  meta.h  standalone_demo.cpp  struct_iteration.cpp
examples/shaders/: shader.frag
examples/stat_rethinking/: CLAUDE.md  CMakeLists.txt  README.md  bangladesh_contraception.cpp  bangladesh_gather_test.cpp  bmj_symbolic.cpp  bmj_weekend_submissions.cpp  hierarchical_gather_example.cpp  linear_regression.cpp  logistic_regression.cpp  random_allocation_game.cpp
experiments/: CMakeLists.txt  enum_kit.cpp  hello_reflection.cpp
src/: BUILD  CMakeLists.txt  README.md  benchmark.h  benchmark_test.cpp  block_gfx_patterns.h  block_gfx_scorer.h  block_graphics.h  block_graphics_demo.cpp  block_graphics_test.cpp  broadcast_array.h  broadcast_array_test.cpp  chebyshev.h  chebyshev_test.cpp  comparison.h  comparison_test.cpp  compile_time_string.h  compile_time_string_test.cpp  complie_time_string.h  complie_time_string_test.cpp  csv.h  csv_test.cpp  fifo_queue.h  fifo_queue_test.cpp  flog_chars.txt  function_objects.h  function_traits.h  glyphs_demo.cpp  guarded.h  guarded_test.cpp  image.h  image_test.cpp  interpolate.h  interpolate_test.cpp  json.cpp  json.h  json_test.cpp  matcher.h  matrix.h  matrix_test.cpp  (+29 more)
src/autodiff/: CMakeLists.txt  README.md  dual.h  dual_test.cpp  hessian.h  hessian_test.cpp  jacobian.h  jacobian_test.cpp  jet.h  jet_test.cpp  node.h  node_test.cpp  tape.h  tape_test.cpp  taylor.h  taylor_test.cpp  transform.h  transform_test.cpp  util.h  util_test.cpp  var.h  weighted_dag.h  weighted_dag_test.cpp
src/bayes/: CMakeLists.txt  bernoulli.h  bernoulli_test.cpp  beta.h  beta_test.cpp  binomial.h  binomial_test.cpp  cauchy.h  cauchy_test.cpp  exponential.h  exponential_test.cpp  gamma.h  gamma_test.cpp  integrators.h  logistic.h  logistic_test.cpp  normal.h  normal_bench.cpp  normal_test.cpp  numeric_traits.h  poisson.h  poisson_test.cpp  random.h  random_simd.h  random_simd_test.cpp  random_test.cpp  rng_quality_report.cpp  rng_simd_quality_report.cpp  rng_tests.h  rng_tests_test.cpp  student_t.h  student_t_test.cpp  uniform.h  uniform_test.cpp
src/bayes2/: CMakeLists.txt  README.md  bayes2.h  bayes2_test.cc  core.h  distributions.h  indexed.h  indexed_test.cpp  operators.h  plate.h  plate_test.cc  reparam.h  reparam_test.cc  sample.h  traversal.h
src/bayes3/: CMakeLists.txt  core.h  core_test.cpp
src/cache/: CMakeLists.txt  cache_benchmark.cpp  cache_test.cpp  clock_cache.h  eviction_policy.h  fifo_cache.h  invalidation_strategy.h  lfu_cache.h  lifo_cache.h  lru_cache.h  lru_k_cache.h  mfu_cache.h  mru_cache.h  random_cache.h
src/comm/: CMakeLists.txt  channel.h  channel_test.cpp
src/containers/: CMakeLists.txt  list.h  list_test.cpp
src/cuda/: CMakeLists.txt  add_ten.cu  cuda-shell.nix  hello_world  hello_world.cu  main.cpp  pi.cu
src/dag/: CMakeLists.txt  ascii_dag.h  ascii_dag_test.cc  causal.h  dag.h  dag_test.cc  unicode_render.h
src/games/: CMakeLists.txt  sudoku.h  sudoku_test.cpp
src/hash/: CMakeLists.txt  README.md  aes_hash.h  crc32c.h  fibonacci.h  fnv.h  hardware_hash_test.cpp  hash.h  hash_benchmark.cpp  hash_test.cpp  murmur3.h  perfect_hash.h  perfect_hash_test.cpp  rolling_hash.h  wyhash.h
src/io_uring/: CMakeLists.txt  io_uring.h  io_uring_context.h  io_uring_sender.h  io_uring_sender_test.cpp  io_uring_test.cpp
src/math/: CMakeLists.txt  cos.h  cos_test.cpp  eft.h  eft_test.cpp  exp.h  exp_test.cpp  float_bits.h  float_bits_test.cpp  poly.h  poly_test.cpp  ratio.h  ratio_test.cpp  sin.h  sin_test.cpp  sqrt_approx.h  (+4 more)
test/: CMakeLists.txt  chebyshev_test.cpp  interpolate_test.cpp  json_test.cpp  root_finding_test.cpp  sequence_test.cpp
(+1098 files in other folders)
