add_executable(concepts concepts.cpp)
add_executable(external_polymorphism external_polymorphism.cpp)
add_executable(crtp crtp.cpp)
add_executable(cyclic_visitor cyclic_visitor.cpp)
add_executable(observer observer.cpp)
add_executable(passkey passkey.cpp)
add_executable(strategy strategy.cpp)
add_executable(visitor visitor.cpp)

